提示信息国际化

--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,3 +1,4 @@
-success=\u6210\u529F
-fail=\u5931\u8D25
+success=\u6210\u529F!
+fail=\u7CFB\u7EDF\u5F02\u5E38\uFF01
 user.sign.not-exist=\u7528\u6237\u4E0D\u5B58\u5728\u6216\u5BC6\u7801\u9519\u8BEF
+demo.test.error=Demo\u6D4B\u8BD5\u5F02\u5E381{0}\uFF0C\u5F02\u5E382{1}
