--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,5 +1,7 @@
 # \u901A\u7528\u6D88\u606F
-success=\u6210\u529F
-fail=\u5931\u8D25
+success=\u6210\u529F!
+fail=\u7CFB\u7EDF\u5F02\u5E38\uFF01
+# demo\u6D4B\u8BD5\u5F02\u5E38
+demo.test.error=Demo\u6D4B\u8BD5\u5F02\u5E381{0}\uFF0C\u5F02\u5E382{1}
 # \u7528\u6237\u767B\u5F55\u5F02\u5E38\u4FE1\u606F
 user.sign.not-exist=\u7528\u6237\u4E0D\u5B58\u5728\u6216\u5BC6\u7801\u9519\u8BEF
