--- a/src/main/resources/i18n/messages_en_US.properties
+++ b/src/main/resources/i18n/messages_en_US.properties
@@ -1,3 +1,4 @@
-success=success
-fail=fail
+success=Success!
+fail=System exception!
 user.sign.not-exist=The user does not exist or the password is incorrect
+demo.test.error=Demo test exception 1{0}, exception 2{1}
